# virtuelle-fabrik

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example_optimization.py  pyproject.toml  requirements.txt
API/: docker-compose.yml  requirements.txt
API/app/: main.py
API/app/factory_models/: notes.py
API/app/persistence/: database.py  maschinen.py  notes.py
API/app/src/: socket_handlers.py
Konzeption/Algorithmus/: Batch.py  Controller.py  Default.py  Employee.py  EmployeeEmpowerment.py  EmployeeWorkingHours.py  FactoryStructure.py  Machine.py  MachineCapability.py  Material.py  MaterialRequirements.py  MaterialRessources.py  MaterialWarehouse.py  OrderProcessing.py  Product.py  ProductionPlanning.py  Recipe.py  Scheduling.py  Station.py  Step.py  Warehouse.py  WorkingRessources.py  WorkingTimeMachine.py  notebook.ipynb
Konzeption/Datenschema/: VFabrik.xml
alembic/: env.py
alembic/versions/: 0a5b4987f475_add_stationen_and_produktionslinien_.py  2f6592191291_add_station_order.py  478f5dc0676e_add_produkt_and_material_tables.py  507ec2ed41be_add_maschinen_tables.py  8741480c2ca3_add_arbeitsschritt_entity.py  87a01f4da4cf_add_produkt_related_cascades.py  e14b4e7cbc95_add_charge_and_produktbedarf_tables.py
example/: example.py  requirements.txt
src/virtuelle_fabrik/domain/: exception.py  models.py
src/virtuelle_fabrik/optimization/: controller.py  production_planning.py
src/virtuelle_fabrik/persistence/: __init__.py  association.py  charge.py  database.py  maschinen.py  optimierungen.py  produkte.py  produktionslinien.py
(+8 files in other folders)
