[tool.poetry]
name = "virtuelle-fabrik"
version = "0.1.0"
description = ""
authors = ["Stefan Pflueger <stefan.pflueger@exxcellent.de>"]
readme = "README.md"
packages = [{include = "virtuelle_fabrik"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
databases = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
aiosqlite = "^0.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
