[tool.poetry]
name = "virtuelle-fabrik"
version = "0.1.0"
description = ""
authors = ["Stefan Pflueger <stefan.pflueger@exxcellent.de>"]
readme = "README.md"
packages = [{include = "virtuelle_fabrik"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
aiosqlite = "^0.18.0"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
attrs = "^22.2.0"
python-socketio = "^5.8.0"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core==1.4.1"]
build-backend = "poetry.core.masonry.api"
